--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,9 @@
               [previousButtonIconClass]="carouselConfine.previousButtonIconClass"
               [nextButtonIconClass]="carouselConfine.nextButtonIconClass"
               [buttonBg]="carouselConfine.buttonBg"
-              [dotsBg]="carouselConfine.dotsBg">
+              [dotsBg]="carouselConfine.dotsBg"
+              (onNext)="onNext($event)"
+              (onStepChange)="onStepChange($event)">
   <ngx-carousel-step *ngFor="let item of steps; let index = index;"
                      [carouselAnimationClass]="animationClass"
                      [bgColor]="item.bgColor"
@@ -33,8 +35,5 @@
       </div>
     </ng-template>
   </ngx-carousel-step>
-
-  <!--<ng-template ngxCarouselNextButton>
-    <i class="fa fa-long-arrow-right"></i>
-  </ng-template>-->
 </ngx-carousel>
+<div style="height: 100px"></div>
