--- a/projects/ngx-carousel/src/lib/ngx-carousel/ngx-carousel.component.scss
+++ b/projects/ngx-carousel/src/lib/ngx-carousel/ngx-carousel.component.scss
@@ -19,6 +19,7 @@
 
     &.image-background-style {
       background-repeat: no-repeat;
+      background-position: center;
     }
 
     .ngx-carousel-step-overlay {
