--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<ul class="nav top-bar  justify-content-between">
+<ul class="nav top-bar justify-content-between">
   <li class="nav-item">
     <h3>Ngx Carousel</h3>
+    <strong>Version: 1.0.4</strong>
   </li>
   <li class="nav-item pull-right">
     <a class="btn btn-transparent"
