--- a/projects/ngx-carousel/src/lib/ngx-carousel/ngx-carousel.component.scss
+++ b/projects/ngx-carousel/src/lib/ngx-carousel/ngx-carousel.component.scss
@@ -36,7 +36,8 @@
       text-align: center;
       padding: 20px;
       margin: 0 auto;
-      z-index: 99;
+      overflow: hidden;
+      overflow-y: auto;
     }
 
   }
